Added the about section to it

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="projects-container">
         <!-- Project 1 -->
         <div class="card">
-            <figure><img src="path/to/recipe.png" alt="Hot Prepare Recipe" class="project-image"></figure>
+            <figure><img src="./Assets/recipe.png" alt="Hot Prepare Recipe" class="project-image"></figure>
             <div class="card-body">
                 <h2 class="card-title">Hot Prepare Recipe</h2>
                 <p>A recipe site built with react and tailwind by fetching data from an API using the fetch method.</p>
@@ -135,7 +135,7 @@
         </div>
         <!-- Project 2 -->
         <div class="card">
-            <figure><img src="path/to/Chat.png" alt="Chat Interface" class="project-image"></figure>
+            <figure><img src="./Assets/Chat.png" alt="Chat Interface" class="project-image"></figure>
             <div class="card-body">
                 <h2 class="card-title">Chat Interface</h2>
                 <p>Coding out a UI design with react and tailwindcss.</p>
@@ -147,7 +147,7 @@
         </div>
         <!-- Project 3 -->
         <div class="card">
-            <figure><img src="path/to/gtmovies.png" alt="GT Movies" class="project-image"></figure>
+            <figure><img src="./Assets/gtmovies.png" alt="GT Movies" class="project-image"></figure>
             <div class="card-body">
                 <h2 class="card-title">GT Movies</h2>
                 <p>A fullstack Netflix clone project built with a movie API and Firebase as backend.</p>
@@ -159,7 +159,7 @@
         </div>
         <!-- Project 4 -->
         <div class="card">
-            <figure><img src="path/to/gpt.png" alt="GT Chat AI" class="project-image"></figure>
+            <figure><img src="./Assets/gpt.png" alt="GT Chat AI" class="project-image"></figure>
             <div class="card-body">
                 <h2 class="card-title">GT Chat AI</h2>
                 <p>A fullstack Gemini clone project built with a Gemini API and Firebase as backend.</p>
@@ -171,12 +171,23 @@
         </div>
         <!-- Project 5 -->
         <div class="card">
-            <figure><img src="path/to/otp.png" alt="OTP System" class="project-image"></figure>
+            <figure><img src="./Assets/otp.png" alt="OTP System" class="project-image"></figure>
             <div class="card-body">
                 <h2 class="card-title">OTP System</h2>
                 <p>One Time Password system built with React, no backend to receive code included.</p>
                 <div class="card-actions">
                     <a href="https://otp-system.vercel.app/" target="_blank" class="btn">Visit Site</a>
+                    <a href="https://github.com/Gabby-Tech1/OTP-System" target="_blank" class="btn secondary">View Code</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <figure><img src="./Assets/Landing page.png" alt="OTP System" class="project-image"></figure>
+            <div class="card-body">
+                <h2 class="card-title">Blugle Medical Service</h2>
+                <p>A health medicine platform built with react and tailwind and also nodejs for backend</p>
+                <div class="card-actions">
+                    <a href="https://blugle-rcdo.vercel.app" target="_blank" class="btn">Visit Site</a>
                     <a href="https://github.com/Gabby-Tech1/OTP-System" target="_blank" class="btn secondary">View Code</a>
                 </div>
             </div>
