Added the project section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
   </div>
   <div id="projects">
-    <h1 class="title">MY Latest <span class="highlighted-text">Projects</span></h1>
+    <h1 class="project-title">MY Latest <span class="highlighted-text">Projects</span></h1>
     <div class="projects-container">
         <!-- Project 1 -->
         <div class="card">
@@ -273,16 +273,16 @@
       <p class="subtitle">Made by Gabby Tech</p>
       <div class="social-links">
         <a href="https://wa.me/+233591071237" target="_blank" rel="noopener noreferrer">
-          <img src="path/to/Whatsapp.png" alt="WhatsApp" class="icon" />
+          <img src="./Assets/Whatsapp.png" alt="WhatsApp" class="icon" />
         </a>
         <a href="https://github.com/Gabby-Tech1" target="_blank" rel="noopener noreferrer">
-          <img src="path/to/GitHub.png" alt="GitHub" class="icon" />
+          <img src="./Assets/GitHub.png" alt="GitHub" class="icon" />
         </a>
         <a href="mailto:gkaquainoo@gmail.com">
-          <img src="path/to/Email.png" alt="Email" class="icon" />
+          <img src="./Assets/Email.png" alt="Email" class="icon" />
         </a>
         <a href="https://www.linkedin.com/in/gabriel-kwame-addo-quainoo-3b0960297/" target="_blank" rel="noopener noreferrer">
-          <img src="path/to/LinkedIn.png" alt="LinkedIn" class="icon" />
+          <img src="./Assets/LinkedIn.png" alt="LinkedIn" class="icon" />
         </a>
       </div>
       <div class="copyright">Copyright © 2024. All rights reserved.</div>
