--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Gabby<span class="logo-highlight">TECH</span>.
       </h1>
       <nav class="nav-links">
-        <a href="#" class="nav-link">Home</a>
+        <a href="#home" class="nav-link">Home</a>
         <a href="#about" class="nav-link">About</a>
         <a href="#services" class="nav-link">Services</a>
         <a href="#projects" class="nav-link">Projects</a>
@@ -31,7 +31,7 @@
 
   <div id="mobile-nav" class="mobile-nav hidden">
     <div class="mobile-nav-content">
-      <a href="#" class="nav-link-mobile" onclick="closeNavbar()">Home</a>
+      <a href="#home" class="nav-link-mobile" onclick="closeNavbar()">Home</a>
       <a href="#about" class="nav-link-mobile" onclick="closeNavbar()">About</a>
       <a href="#services" class="nav-link-mobile" onclick="closeNavbar()">Services</a>
       <a href="#projects" class="nav-link-mobile" onclick="closeNavbar()">Projects</a>
@@ -42,7 +42,7 @@
       <svg class="icon" fill="#0ef" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px"><path d="M0 0h24v24H0z" fill="none"/><path d="M19.59 7.41L18.17 6l-6 6-6-6L4.41 7.41 10.41 13.41l-6 6L6 20.83l6-6 6 6 1.41-1.42-6-6z"/></svg>
     </div>
   </div>
-  <div class="hero">
+  <div class="hero" id="home">
     <div class="hero-container">
       <div class="hero-text">
         <h1 class="hero-heading text-line">
