--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GabbyTECH</title>
+  <title>GabbyTECH Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -116,13 +116,11 @@
         MY <span class="highlighted-text">Skills</span>
     </h1>
     <div class="skills-container">
-        <!-- Skill items will be inserted here by JavaScript -->
     </div>
   </div>
   <div id="projects">
     <h1 class="project-title bounce-in-top">MY Latest <span class="highlighted-text">Projects</span></h1>
     <div class="projects-container">
-        <!-- Project 1 -->
         <div class="card">
             <figure><img src="./Assets/recipe.png" alt="Hot Prepare Recipe" class="project-image"></figure>
             <div class="card-body">
@@ -134,19 +132,17 @@
                 </div>
             </div>
         </div>
-        <!-- Project 2 -->
         <div class="card">
             <figure><img src="./Assets/Chat.png" alt="Chat Interface" class="project-image"></figure>
             <div class="card-body">
                 <h2 class="card-title">Chat Interface</h2>
-                <p>Coding out a UI design with react and tailwindcss.</p>
+                <p>Coding out a UI design interface with react and tailwindcss. </p>
                 <div class="card-actions">
                     <a href="https://hot-prepare-recipe.vercel.app" target="_blank" class="btn">Visit Site</a>
                     <a href="https://github.com/Ideation-Axis-Intern/UI-Challenge-" target="_blank" class="btn secondary">View Code</a>
                 </div>
             </div>
         </div>
-        <!-- Project 3 -->
         <div class="card">
             <figure><img src="./Assets/gtmovies.png" alt="GT Movies" class="project-image"></figure>
             <div class="card-body">
@@ -158,7 +154,6 @@
                 </div>
             </div>
         </div>
-        <!-- Project 4 -->
         <div class="card">
             <figure><img src="./Assets/gpt.png" alt="GT Chat AI" class="project-image"></figure>
             <div class="card-body">
@@ -170,7 +165,6 @@
                 </div>
             </div>
         </div>
-        <!-- Project 5 -->
         <div class="card">
             <figure><img src="./Assets/otp.png" alt="OTP System" class="project-image"></figure>
             <div class="card-body">
@@ -201,10 +195,14 @@
       <div class="swiper-wrapper">
         <swiper-slide class="swiper-slide testimonial">
           <div class="testimonial-content">
-            <img src="./Assets/image4.jpeg" alt="avatar" class="avatar"/>
+            <div class="upper">
+              <img src="./Assets/image4.jpeg" alt="avatar" class="avatar"/>
+              <div>
+                <p class="name">Nana A. Agyapong</p>
+                <p class="role">CEO of Melcom Online</p>
+              </div>
+            </div>
             <div class="testimonial-text">
-              <p class="name">Nana A. Agyapong</p>
-              <p class="role">CEO of Melcom Online</p>
               <p class="message">
                 His expertise in modern web technologies has improved our online sales and customer engagement.
               </p>
@@ -213,22 +211,30 @@
         </swiper-slide>
         <swiper-slide class="swiper-slide testimonial">
           <div class="testimonial-content">
-            <img src="./Assets/image2.jpeg" alt="avatar" class="avatar"/>
-            <div class="testimonial-text">
-              <p class="name">Derrick K.</p>
-              <p class="role">Founder of ABC Startups</p>
+            <div class="upper">
+              <img src="./Assets/image2.jpeg" alt="avatar" class="avatar"/>
+              <div>
+                <p class="name">Derrick K.</p>
+                <p class="role">Founder of ABC Startups</p>
+              </div>
+            </div>
+          <div class="testimonial-text">
               <p class="message">
-                Working with Gabby Tech was a pleasure. He is a skilled professional who listens to your needs and delivers high quality solutions.
+                Gabriel is a skilled professional who listens to your needs and delivers high quality solutions.
               </p>
             </div>
           </div>
         </swiper-slide>
         <swiper-slide class="swiper-slide testimonial">
           <div class="testimonial-content">
-            <img src="./Assets/image1.jpeg" alt="avatar" class="avatar"/>
+            <div class="upper">
+              <img src="./Assets/image1.jpeg" alt="avatar" class="avatar"/>
+              <div>
+                <p class="name">Emily Johnson</p>
+                <p class="role">Founder</p>
+              </div>
+            </div>
             <div class="testimonial-text">
-              <p class="name">Emily Johnson</p>
-              <p class="role">Founder</p>
               <p class="message">
                 "Outstanding service! Gabriel delivered a user-friendly and secure platform."
               </p>
@@ -237,17 +243,20 @@
         </swiper-slide>
         <swiper-slide class="swiper-slide testimonial">
           <div class="testimonial-content">
+            <div class="upper">
             <img src="./Assets/image3.jpeg" alt="avatar" class="avatar"/>
-            <div class="testimonial-text">
+            <div>
               <p class="name">Smith John</p>
               <p class="role">Marketing Director</p>
+            </div>
+            </div>
+          <div class="testimonial-text">
               <p class="message">
                 "Incredible attention to detail and innovation. Highly recommend Gabby Tech!"
               </p>
             </div>
           </div>
         </swiper-slide>
-        <!-- Add more slides as needed -->
       </div>
     </swiper-container>
   </section>
